src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>All_Traffic_Sources__c</fullName>
        <label>All Traffic Sources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>GA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMRRWithDiscount__c</fullName>
        <label>CMRR With Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMRR__c</fullName>
        <description>It pulls the value from the Billing Account.</description>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It gives the option to choose the name of CSM who has worked on that account.</description>
        <label>CSM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Customer Success Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>It pulls the currency details from the billing account.</description>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This stops email drip on Opportunity associated with that Account. If any account is set to DND it will show a message on the top saying this account is in DND mode.</description>
        <label>DND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>Subscription__r.DomainIndexed__c</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>Subscription__r.Instance_Expiry_Date__c</formula>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GA_Client_ID_Formula__c</fullName>
        <formula>gaconnector_Google_Analytics_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Client ID (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Sync_From_HubSpot__c</fullName>
        <description>This is for HubSpot use only</description>
        <label>Sync From HubSpot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KA_Domain__c</fullName>
        <label>Domain (Deprecated)</label>
        <length>253</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LifeTimeBilledAmount__c</fullName>
        <label>Lifetime Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Billed_Amount__c</fullName>
        <description>Total payment received from the customer.</description>
        <label>Lifetime Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Billed_Amount_rollup__c</fullName>
        <label>Lifetime Billed Amount</label>
        <summarizedField>Zuora__CustomerAccount__c.Lifetime_Billed_Amount__c</summarizedField>
        <summaryForeignKey>Zuora__CustomerAccount__c.Zuora__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NetNextChargeAmount__c</fullName>
        <description>This field shows the amount customer will be charged next.</description>
        <label>Net Next Charge Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Promo_Code__c</fullName>
        <description>DO NOT CHANGE OR EDIT THIS FIELD! Original Promotional Code from initial lead creation for Marketing purposes</description>
        <inlineHelpText>DO NOT CHANGE OR EDIT THIS FIELD! Original Promotional Code from initial lead creation for Marketing purposes</inlineHelpText>
        <label>Original Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <description>It pulls the value from the Invoices Section.</description>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Subscription__r.Product_Name__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan__c</fullName>
        <formula>Subscription__r.RatePlanIndexed__c</formula>
        <label>Rate Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Autopilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Autopilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecurityToken__c</fullName>
        <label>Security Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Due</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Closed_Amount__c</fullName>
        <label>Total Closed Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zuora__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>adroll__ClickConversion__c</fullName>
        <description>Conversion Rate For Clicks</description>
        <inlineHelpText>Conversion Rate For Clicks</inlineHelpText>
        <label>Click Conversion (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>adroll__ClickCosts__c</fullName>
        <description>Costs Incurred for the Clicks</description>
        <inlineHelpText>Costs Incurred for the Clicks</inlineHelpText>
        <label>Account Click Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>adroll__Click_Conversion__c</fullName>
        <formula>adroll__ClickConversion__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Click Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__Clicks__c</fullName>
        <description>Number of Clicks for the Email Address</description>
        <inlineHelpText>Number of Clicks for the Email Address</inlineHelpText>
        <label>Account Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__ImpressionCosts__c</fullName>
        <description>Costs Incurred for the Impressions</description>
        <inlineHelpText>Costs Incurred for the Impressions</inlineHelpText>
        <label>Account Impression Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>adroll__Impressions_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Impressions External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__Impressions__c</fullName>
        <description>Number of Impressions for the user</description>
        <inlineHelpText>Number of Impressions for the user</inlineHelpText>
        <label>Account Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__LastAdRollTrackingDate__c</fullName>
        <description>Latest Date of the Tracking Data Occurrence</description>
        <inlineHelpText>Latest Date of the Tracking Data Occurrence</inlineHelpText>
        <label>Account Last RollWorks Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>adroll__ViewConversion__c</fullName>
        <description>Conversion Rate for Views</description>
        <inlineHelpText>Conversion Rate for Views</inlineHelpText>
        <label>View Conversion (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>adroll__View_Conversion__c</fullName>
        <formula>adroll__ViewConversion__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account View Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Campaign__c</fullName>
        <label>First Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Channel__c</fullName>
        <label>First Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Content__c</fullName>
        <label>First Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Landing_Page__c</fullName>
        <label>First Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Medium__c</fullName>
        <label>First Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Referrer__c</fullName>
        <label>First Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Source__c</fullName>
        <label>First Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Term__c</fullName>
        <label>First Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Client_ID__c</fullName>
        <label>Google Analytics Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Link__c</fullName>
        <formula>HYPERLINK( (&quot;https://analytics.google.com/analytics/web/#report/visitors-user-activity/a72840801w110617423p115383936/%3F_r.userId%3D&quot; &amp; CID__c &amp; &quot;%26_r.userListReportStates%3D%26_r.userListReportId%3Dvisitors-legacy-user-id/&quot;), &quot;Open in Google Analytics&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Analytics Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Campaign__c</fullName>
        <label>Last Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Channel__c</fullName>
        <label>Last Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Content__c</fullName>
        <label>Last Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Landing_Page__c</fullName>
        <label>Last Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Medium__c</fullName>
        <label>Last Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Referrer__c</fullName>
        <label>Last Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Source__c</fullName>
        <label>Last Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Term__c</fullName>
        <label>Last Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Latitude_from_IP__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Location_approx__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=loc:&quot; &amp;  gaconnector_Latitude_from_IP__c  &amp; &quot;,&quot; &amp; (gaconnector_Longitude__c), &quot;Open in Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location (approx.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Number_of_Website_Visits__c</fullName>
        <label>Number of Website Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Pages_visited__c</fullName>
        <label>Pages visited</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website__c</fullName>
        <label>Time Spent on Website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website_formul__c</fullName>
        <formula>TEXT(ROUND(gaconnector_Time_Spent_on_Website__c / 60000,0)) &amp; &quot;:&quot; &amp; 
TEXT(MOD(ROUND(gaconnector_Time_Spent_on_Website__c / 1000,0), 60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent on Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Rating__c</fullName>
        <label>Infer: Behavior Score [1-4]</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Score__c</fullName>
        <label>Infer: Behavior Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Updated__c</fullName>
        <label>Infer: Behavior Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>infer3__Encoded_Rating__c</fullName>
        <formula>RPAD(&apos;4&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;4&apos;)+RPAD(&apos;3&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;3&apos;)+RPAD(&apos;2&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c,&apos;2&apos;)+RPAD(&apos;1&apos;,101-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c,&apos;1&apos;)</formula>
        <label>Infer Encoded Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Personas__c</fullName>
        <label>Infer: Profiles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Profiles_Short__c</fullName>
        <label>Infer: Profiles (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Rating__c</fullName>
        <formula>TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/255),0,infer3__Score_Object_ID__r.infer3__Rating_0__c,1,infer3__Score_Object_ID__r.infer3__Rating_1__c,2,infer3__Score_Object_ID__r.infer3__Rating_2__c,3,infer3__Score_Object_ID__r.infer3__Rating_3__c,4,infer3__Score_Object_ID__r.infer3__Rating_4__c,5,infer3__Score_Object_ID__r.infer3__Rating_5__c,6,infer3__Score_Object_ID__r.infer3__Rating_6__c,null),1+MOD(infer3__Score_Index__c,255),1),&apos;^&apos;,&apos; &apos;))</formula>
        <label>Infer: Fit Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Score__c</fullName>
        <formula>VALUE(TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/85),0,infer3__Score_Object_ID__r.infer3__Score_0__c,1,infer3__Score_Object_ID__r.infer3__Score_1__c,2,infer3__Score_Object_ID__r.infer3__Score_2__c,3,infer3__Score_Object_ID__r.infer3__Score_3__c,4,infer3__Score_Object_ID__r.infer3__Score_4__c,5,infer3__Score_Object_ID__r.infer3__Score_5__c,6,infer3__Score_Object_ID__r.infer3__Score_6__c,7,infer3__Score_Object_ID__r.infer3__Score_7__c,8,infer3__Score_Object_ID__r.infer3__Score_8__c,9,infer3__Score_Object_ID__r.infer3__Score_9__c,10,infer3__Score_Object_ID__r.infer3__Score_10__c,11,infer3__Score_Object_ID__r.infer3__Score_11__c,12,infer3__Score_Object_ID__r.infer3__Score_12__c,13,infer3__Score_Object_ID__r.infer3__Score_13__c,14,infer3__Score_Object_ID__r.infer3__Score_14__c,15,infer3__Score_Object_ID__r.infer3__Score_15__c,16,infer3__Score_Object_ID__r.infer3__Score_16__c,17,infer3__Score_Object_ID__r.infer3__Score_17__c,18,infer3__Score_Object_ID__r.infer3__Score_18__c,null),1+3*MOD(infer3__Score_Index__c,85),3),&apos;^&apos;,&apos; &apos;)))</formula>
        <label>Infer: Fit Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Num_Contacts__c</fullName>
        <label>Infer: Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Num_Engaged_Contacts__c</fullName>
        <label>Infer: Number of Engaged Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Num_Engaged_Entities__c</fullName>
        <formula>infer3__Num_Engaged_Contacts__c +  infer3__Num_Engaged_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infer: Number of Engaged Entities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Num_Engaged_Leads__c</fullName>
        <label>Infer: Number of Engaged Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Num_Leads__c</fullName>
        <label>Infer: Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Number_Entities__c</fullName>
        <formula>infer3__Num_Contacts__c +  infer3__Num_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infer: Number of Entities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Index__c</fullName>
        <label>Infer Score Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Object_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Score Object ID</label>
        <referenceTo>infer3__Score_Object__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_Score_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Snapshot__c</fullName>
        <description>A saved copy of the score, if the &quot;Update Account with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</description>
        <inlineHelpText>A saved copy of the score, if the &quot;Update Account with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</inlineHelpText>
        <label>Infer Score Snapshot NOT FOR LAYOUT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__behavioral_evaluation_score__c</fullName>
        <description>The score of the Account at the time the last Opportunity was created, or if no opportunities were created, the current behavior score.</description>
        <label>Infer: Behavioral Evaluation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_city__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_5__c</formula>
        <label>Infer: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_company_size__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_1__c</formula>
        <label>Infer: Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_competitors__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_29__c</formula>
        <label>Infer: Competitors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_country__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_10__c</formula>
        <label>Infer: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_email_type__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_7__c</formula>
        <label>Infer: Email Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_eloqua__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_25__c</formula>
        <label>Infer: Has Eloqua</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_hubspot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_28__c</formula>
        <label>Infer: Has Hubspot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_marketo__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_26__c</formula>
        <label>Infer: Has Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_pardot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_27__c</formula>
        <label>Infer: Has Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_ssl__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_18__c</formula>
        <label>Infer: Has SSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_revenue__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_3__c</formula>
        <label>Infer: Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_sector__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_4__c</formula>
        <label>Infer: Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_state__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_12__c</formula>
        <label>Infer: State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_uses_aws__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_19__c</formula>
        <label>Infer: Uses AWS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_website_rank__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_6__c</formula>
        <label>Infer: Website Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_zip__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_8__c</formula>
        <label>Infer: Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadfeederapp__LatestWebsiteVisit__c</fullName>
        <label>Latest Leadfeeder Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>leadfeederapp__LeadfeederLink__c</fullName>
        <label>View in Leadfeeder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tz__LT_Info__c</fullName>
        <description>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</description>
        <inlineHelpText>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</inlineHelpText>
        <label>LT Info</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Account in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Account in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Account in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time for the Account in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
</CustomObject>